# treelauncher

./: .gitignore  README.md  build.gradle  build.gradle.kts  launcher.conf  reminders.txt  settings.gradle  settings.gradle.kts
app/: launcher.conf
client/: .gitignore  build.gradle.kts  settings.gradle  settings.gradle.kts
client/.fleet/: receipt.json
client/app/: launcher.conf
client/composeApp/: build.gradle.kts  compose-desktop.pro
client/distRes/: run.bat
client/gradle/: libs.versions.toml
client/old/: build.gradle.kts  settings.gradle.kts
client/update/: 0.3.1  0.4.0  0.5.0  0.6.0  0.7.0  0.7.1
client/updateConverter/: Update.js  index.js
client/versionManifests/: 0.4.0.json  0.5.0.json  0.6.0.json  0.7.0.json  0.7.1.json  1.0.0.json
config/: vanillaconfig.json
config/ridehud/: ridehud.json
distRes/: run.bat
gradle/wrapper/: gradle-wrapper.properties
launcher_mockup/: launcher.json  manifest.json
launcher_mockup/game_data/: manifest.json  mods.json  options.txt  saves.json
packageRes/: launcher.conf
server/: .gitignore  Cargo.toml  config.sync  spec.json  specification.yaml
server/src/: main.rs  (+2 more)
update/: 0.3.0  0.3.1  0.4.0
update-server/: .gitignore  Cargo.toml  swagger.yaml  update.conf
update-server/src/: main.rs  news.rs  service.rs  update.rs  update_manifest.rs
updateConverter/: Update.js  index.js
updater/: .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts
versionManifests/: 0.3.1.json  0.6.0.json
web/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+977 files in other folders)
