[package]
name = "update-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"
serde_json = "1.0.107"
semver = "1.0.19"
urlencoding = "2.1.3"