[package]
name = "update-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"
serde_json = "1.0.114"
semver = "1.0.22"
urlencoding = "2.1.3"
md5 = "0.7.0"